# function-encoder-jax

./: .gitignore  README.md  derivative.py  polynomial.py  pyproject.toml  requirements.txt
examples/: b2b_antiderivative.py  b2b_derivative.py  derivative.py  derivative_b2b.py  derivative_b2b_linear.py  derivative_b2b_nonlinear.py  derivative_eigen.py  derivative_svd.py  koopman_test.py  operator_b2b_linear.py  operator_b2b_nonlinear.py  operator_eigen.py  operator_svd.py  polynomial.py  polynomial_residual.py  random_function.py  van_der_pol.py
examples/datasets/: polynomial.py  van_der_pol.py
function_encoder/: __init__.py  coefficients.py  function_encoder.py  inner_product.py  inner_products.py  losses.py  operator_encoder.py
function_encoder/jax/: coefficients.py  function_encoder.py  inner_products.py  losses.py  operator_encoder.py
function_encoder/jax/model/: mlp.py  neural_ode.py
function_encoder/jax/utils/: training.py
function_encoder/model/: __init__.py  base.py  basis.py  gcn.py  mlp.py  neural_ode.py
function_encoder/utils/: __init__.py  safe_dot.py
