[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function_encoder"
version = "0.0.1"
description = "Function encoder."
readme = "README.md"

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "jax>=0.2.21",
    "jaxlib>=0.1.70",
    "equinox>=0.5.0",
    "lineax>=0.1.0",
    "jaxtyping>=0.1.0",
    "optax>=0.0.9",
    "diffrax>=0.1.0",
    "tqdm>=4.62.0",
]