[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "function_encoder_jax"
version = "0.0.1"
description = "Function encoder."
readme = "README.md"

dependencies = [
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
    "equinox>=0.11.11",
    "lineax>=0.0.7",
    "jaxtyping>=0.2.37",
    "optax>=0.2.4",
    "diffrax>=0.6.2",
    "tqdm>=4.67.1",
]